--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,18 @@ layer(base);
 
 @import "tailwindcss";
 
+@font-face {
+    font-family: "Font";
+    src: url("/fonts/index.ttf");
+    font-weight: normal;
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
   --font-*: initial;
-  --font-outfit: Outfit, sans-serif;
+  --font-outfit: Font , sans-serif;
 
   --breakpoint-*: initial;
   --breakpoint-2xsm: 375px;
